docs/v3.8.0/_sources/gallery/experiment/sphere/sphere_coupling_vs_wavelength.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/experiment/sphere/sphere_coupling_vs_wavelength.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_wavelength.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_experiment_sphere_sphere_coupling_vs_wavelength.py:


Sphere: Coupling vs wavelength
==============================

.. GENERATED FROM PYTHON SOURCE LINES 8-9

Importing the package dependencies: numpy, PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 9-18

.. code-block:: Python

    import numpy as np
    from TypedUnit import ureg

    from PyMieSim.experiment.detector import CoherentMode
    from PyMieSim.experiment.scatterer import Sphere
    from PyMieSim.experiment.source import Gaussian
    from PyMieSim.experiment import Setup
    from PyOptik import Material








.. GENERATED FROM PYTHON SOURCE LINES 19-20

Defining the source to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 20-27

.. code-block:: Python

    source = Gaussian(
        wavelength=np.linspace(950, 1050, 200) * ureg.nanometer,
        polarization=0 * ureg.degree,
        optical_power=1e-3 * ureg.watt,
        NA=0.2 * ureg.AU
    )








.. GENERATED FROM PYTHON SOURCE LINES 28-29

Defining the ranging parameters for the scatterer distribution

.. GENERATED FROM PYTHON SOURCE LINES 29-36

.. code-block:: Python

    scatterer = Sphere(
        diameter=np.linspace(100, 8000, 5) * ureg.nanometer,
        property=Material.BK7,
        medium_property=1 * ureg.RIU,
        source=source
    )








.. GENERATED FROM PYTHON SOURCE LINES 37-38

Defining the detector to be employed.

.. GENERATED FROM PYTHON SOURCE LINES 38-48

.. code-block:: Python

    detector = CoherentMode(
        mode_number="LP11",
        NA=[0.05, 0.01] * ureg.AU,
        phi_offset=-180 * ureg.degree,
        gamma_offset=0 * ureg.degree,
        polarization_filter=[0, 90] * ureg.degree,
        rotation=0 * ureg.degree,
        sampling=300 * ureg.AU
    )








.. GENERATED FROM PYTHON SOURCE LINES 49-50

Defining the experiment setup

.. GENERATED FROM PYTHON SOURCE LINES 50-52

.. code-block:: Python

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)








.. GENERATED FROM PYTHON SOURCE LINES 53-54

Measuring the properties

.. GENERATED FROM PYTHON SOURCE LINES 54-56

.. code-block:: Python

    dataframe = experiment.get('coupling', scale_unit=True)








.. GENERATED FROM PYTHON SOURCE LINES 57-58

Plotting the results

.. GENERATED FROM PYTHON SOURCE LINES 58-59

.. code-block:: Python

    dataframe.plot(x="source:wavelength", std='scatterer:diameter')



.. image-sg:: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_wavelength_001.png
   :alt: sphere coupling vs wavelength
   :srcset: /gallery/experiment/sphere/images/sphx_glr_sphere_coupling_vs_wavelength_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <Axes: xlabel='nanometer', ylabel='picowatt'>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.265 seconds)


.. _sphx_glr_download_gallery_experiment_sphere_sphere_coupling_vs_wavelength.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: sphere_coupling_vs_wavelength.ipynb <sphere_coupling_vs_wavelength.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: sphere_coupling_vs_wavelength.py <sphere_coupling_vs_wavelength.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: sphere_coupling_vs_wavelength.zip <sphere_coupling_vs_wavelength.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
